--- a/Noticias_cidade/CSS/estilo.css
+++ b/Noticias_cidade/CSS/estilo.css
@@ -26,6 +26,13 @@ body{
     text-indent: -3000px;
 }
 /*Barra de navegacao*/
+a:link, a:visited{
+    color: #b10333;
+    padding: 2px;
+}
+a:hover{
+    color: #e50040;
+}
 ul{
     margin: 0;
     padding: 0;
@@ -90,14 +97,14 @@ body.fotos #navegacao a#fotos{
     width: 555px;
     float: left;
     margin: 0 0 20px 195px;
-    background: green;
+  
 }
 
 #uma_colunas #primario{
     width: 750px;
     float: left;
     margin: 0 0 20px 0;
-    background: green;
+
 }
 
 #primario{
@@ -188,6 +195,39 @@ h3{
 .entrevista h3{
     background: #de003e;
     color: #fff;
+}
+
+/**-----Formatar Lista de noticias-----**/
+#lista_noticias li{
+    padding: 2px;
+    border-bottom: 1px solid #ccc;
+    height: 65px;
+}
+
+#lista_noticias li a img{
+    float: left;
+    margin: 5px;
+}
+
+#lista_noticias li a{
+    text-decoration: none;
+    
+}
+
+#lista_noticias li a h3{ 
+    padding: 0;
+    font-size: 0.8em;
+    color:  #3e7ab9;
+}
+
+#lista_noticias li a p{
+    font-size: 0.6em;
+    color: #000;
+}
+
+#lista_noticias li:hover{
+   background: #eee;
+   cursor: pointer;
 }
 
 /**-----Rodape-----**/
